added functionality to buttons and icons

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,16 +1,13 @@
-<div>
-  <h1>Portfolio</h1>
-  <h2 [innerHTML]="h2Text"></h2> 
-  <div class="project-body">
-    <app-single-project 
-      *ngFor="let project of projects; let i = index" 
-      [projectNumber]="project.number" 
-      [projectTitle]="getTranslatedTitle(project)"  
-      [projectTech]="project.tech" 
-      [projectImage]="project.image" 
-      [projectDescription]="getTranslatedDescription(project)"  
-      [projectArrow]="project.arrow" 
-      [projectIndex]="i">
-    </app-single-project>
-  </div>
-</div>
+<app-single-project 
+  *ngFor="let project of projects; let i = index" 
+  [projectNumber]="project.number" 
+  [projectTitle]="getTranslatedTitle(project)"  
+  [projectTech]="project.tech" 
+  [projectImage]="project.image" 
+  [projectDescription]="getTranslatedDescription(project)"  
+  [projectArrow]="project.arrow" 
+  [githubLink]="project.githubLink"
+  [liveTestLink]="project.liveTestLink"
+  [projectIndex]="i">
+</app-single-project>
+
