--- a/src/app/projects/single-project/single-project.component.scss
+++ b/src/app/projects/single-project/single-project.component.scss
@@ -202,7 +202,7 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    > button {
+    >a> button {
       background-color: $backround_color;
       cursor: pointer;
       font-family: "overpass";
