--- a/src/app/references/single-reference/single-reference.component.html
+++ b/src/app/references/single-reference/single-reference.component.html
@@ -1,7 +1,7 @@
 <div class="ref-main">
   <div class="ref-info">
     <div>
-      <img [src]="reference.image" alt="" />
+      <img src="./../../../assets/format_quote.png" alt="" />
     </div>
     <div>
       <h1>{{ reference.name }}</h1>
