--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -64,7 +64,9 @@
               <p>{{ translation.email }}</p>
             </div>
             <div class="icons">
-              <img class="icon" src="./../../../assets/linkedin.png" alt="" />
+              <a href="https://www.linkedin.com/in/niklas-lampe-b23a32358/" target="_blank">
+                <img class="icon" src="./../../../assets/linkedin.png" alt="" />
+              </a>
               <img (click)="closeHeader($event); navigateToSectionInMainContent('contact')" class="icon" src="./../../../assets/mail.png" alt="" />
               <a href="https://github.com/NiklasLa46" target="_blank">
                 <img class="icon" src="./../../../assets/github.png" alt="GitHub" />
