--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,10 +1,10 @@
 <header>
-  <div>
+  <div class="header-bar">
     <div>
-      <a href=""><img (click)="scrollToTop()" class="logo" src="./../../../assets/logo2.png" alt="" /></a>
+      <a class="logo-link" href=""><img (click)="scrollToTop()" class="logo" src="./../../../assets/logo2.png" alt="" /></a>
     </div>
     <div class="header-menu">
-      <div class="header-language">
+      <div class="header-language" [ngClass]="{ 'visible': currentHeaderImageIndex === 4 }">
         <p
           [ngClass]="{ 'active-lang': currentLanguage === 'en' }"
           (click)="toggleLanguage('en')"
@@ -57,7 +57,7 @@
         <div class="gradient-div"></div>
         <div class="header-bottom">
           <div class="bottom-content">
-            <div>
+            <div class="bottom-text">
               <h1          (click)="closeHeader($event); navigateToSectionInMainContent('contact')"
               [ngClass]="{ 'active-link': activeLink === 'contact' }"
               data-link="contact">{{ translation.sayHi }}</h1>
