--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -4,10 +4,14 @@ header {
   left: 0;
   background-color: #fffcf3;
   width: 100%;
-  z-index: 1000; 
+  z-index: 1000;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+}
+
+.header-bar{
+  z-index: 1000;
   height: 100px;
 }
 
@@ -19,7 +23,7 @@ header > div {
 
 .header-button {
   padding-right: 80px;
-  &:hover{
+  &:hover {
     cursor: pointer;
   }
 }
@@ -27,7 +31,7 @@ header > div {
 .logo {
   height: 100px;
   padding-left: 80px;
-  &:hover{
+  &:hover {
     cursor: pointer;
   }
 }
@@ -60,44 +64,43 @@ header > div {
 }
 
 .active-lang {
-  outline: 3px solid #00bc8f;  
+  outline: 3px solid #00bc8f;
 }
 
 .header-language > p:not(.active-lang):hover::after {
   content: "";
   position: absolute;
   bottom: 0;
-  right: 0; 
-  width: 55%; 
+  right: 0;
+  width: 55%;
   height: 3px;
   background-color: black;
 }
 .header-extended {
   position: fixed;
-  top: 100px; 
   left: 0;
   width: 100%;
   background-color: #fffcf3;
-  z-index: 999; 
+  z-index: 999;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 100px); 
+  height: 100vh;
   overflow: hidden;
-  transform: translateY(100%); 
-  opacity: 0; 
-  transition: transform 0.5s ease, opacity 0.5s ease; 
+  transform: translateY(100%);
+  opacity: 0;
+  transition: transform 0.5s ease, opacity 0.5s ease;
 }
 
 .header-extended.active {
-  transform: translateY(0); 
-  opacity: 1; 
+  transform: translateY(0);
+  opacity: 1;
 }
 
 .header-extended.closed {
-  transform: translateY(100%); 
-  opacity: 0; 
+  transform: translateY(100%);
+  opacity: 0;
 }
 
 .extended-body {
@@ -122,14 +125,14 @@ header > div {
 
 .extended-links > a {
   display: flex;
-  width: 503px;
-  height: 69px;
+  width: 400px;
+  height: 55px;
+  font-size: 78px;
+  padding: 40px 31.5px;
   color: black;
   text-decoration: none;
   font-family: Syne;
   font-weight: 700;
-  font-size: 96px;
-  padding: 49px 38.5px;
   cursor: pointer;
   align-items: center;
   justify-content: center;
@@ -170,7 +173,7 @@ header > div {
 h1 {
   font-family: "syne800";
   font-weight: 800;
-  font-size: 78px;
+  font-size: 68px;
   color: #fffcf3;
   padding: 0;
   margin: 0;
@@ -212,29 +215,129 @@ p {
 
 .header-black {
   width: 100%;
+  bottom: 0;
 }
 
 .gradient-div {
   background-color: black;
   clip-path: polygon(0 30%, 100% 100%, 0 100%);
-  height: 210px;
+  height: 150px;
   width: 100%;
 }
-
 
 .icon {
   cursor: pointer;
   display: inline-block;
-  transition: transform 0.3s ease; 
+  transition: transform 0.3s ease;
   height: 40px;
 }
 
 .icon:hover {
-  transform: translateY(-8px); 
+  transform: translateY(-8px);
 }
-.icons{
+
+.visible {
+  display: flex;
+}
+
+.icons {
   width: 204px;
   display: flex;
   justify-content: space-between;
 }
 
+@media (max-width: 850px) {
+  .bottom-content {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
+@media (max-width: 750px) {
+  .logo {
+    padding-left: 40px;
+  }
+
+  .header-button {
+    padding-right: 40px;
+  }
+
+  h1 {
+    font-size: 50px;
+  }
+
+  .bottom-content {
+    flex-direction: column;
+  }
+
+  .bottom-text {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .icons {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .icon {
+    padding-left: 32px;
+  }
+
+  .extended-links > a{
+    width: 400px;
+    height: 55px;
+    font-size: 78px;
+    padding: 40px 31.5px;
+  }
+}
+
+@media (max-width: 500px) {
+  .extended-links > a{
+    width: 200px;
+    height: 27.5px;
+    font-size: 39px;
+    padding: 20px 16.5px;
+  }
+}
+
+@media (max-width: 450px) {
+  .logo {
+    padding-top: 10px;
+    padding-left: 10px;
+    height: 80px;
+  }
+
+  .header-button {
+    padding-right: 10px;
+  }
+
+  .logo-link {
+    padding-bottom: 0;
+  }
+}
+
+@media (max-width: 400px) {
+  .logo {
+    padding-top: 10px;
+    padding-left: 5px;
+    height: 80px;
+  }
+
+  .header-button {
+    padding-right: 5px;
+  }
+
+  .header-language {
+    padding-right: 0px;
+  }
+}
+
+@media (max-width: 750px) {
+  .header-language {
+    display: none;
+    font-size: 14px;
+  }
+}
