about-me section responsive

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -3,7 +3,7 @@
     <h1>{{ content.header }}</h1>
   </div>
   <div class="about-me-content">
-    <div>
+    <div class="about-me-content-left">
       <div class="about-me-paragraph">
         <p>{{ content.paragraph }}</p>
       </div>
