--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,8 +1,6 @@
 @import "./../../styles.scss";
 
 div {
-  width: 100%;
-  max-width: 1259px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -13,7 +11,6 @@ div {
 h1 {
   font-family: "syne800";
   font-size: 78px;
- 
   &:hover {
     color: $highlight_color;
   }
@@ -25,7 +22,7 @@ h2 {
   font-weight: normal;
 }
 
-.project-body {
+.projects-main {
   width: 100%;
   max-width: 1259px;
   margin: 0 auto;
@@ -34,4 +31,46 @@ h2 {
   position: relative; 
   padding-top: 100px;
 }
+
+@media (max-width: 1350px) {
+  .projects-main {
+    max-width: 1007.2px;
+    padding-top: 50px;
+  }
+}
+
+@media (max-width: 1050px) {
+  .projects-main {
+    max-width: 675px; 
+    padding-top: 0px;
+  }
+}
+
+@media (max-width: 650px) {
+  h1{
+    font-size: 55px;
+  }
+
+  h2{
+    font-size: 18px;
+  }
+    
+  .projects-main {
+    max-width: 452px; 
+    padding-top: 0px;
+  }
+}
+
+@media (max-width: 450px) {
+  .projects-main {
+    max-width: 222px; 
+    padding-top: 0px;
+  }
+
+  h1{
+    font-size: 40px;
+  }
+}
+
+
 
