--- a/src/app/references/references.component.scss
+++ b/src/app/references/references.component.scss
@@ -34,3 +34,55 @@ div {
     justify-content: center;
   }
 
+  @media (max-width: 800px) {
+    h1{
+      font-size: 58px;
+    }
+
+    h2{
+      font-size: 20px;
+      width: 460px
+    }
+  }
+
+  @media (max-width: 700px) {
+    .references-div{
+      flex-direction: column;
+      padding-top: 0px;
+    }
+  }
+
+  @media (max-width: 600px) {
+    h1{
+      font-size: 48px;
+    }
+
+    h2{
+      font-size: 18px;
+      width: 360px
+    }
+  }
+
+  @media (max-width: 500px) {
+    h1{
+      font-size: 38px;
+    }
+
+    h2{
+      font-size: 18px;
+      width: 360px
+    }
+  }
+
+  @media (max-width: 400px) {
+    h1{
+      font-size: 28px;
+    }
+
+    h2{
+      font-size: 15px;
+      width: 290px
+    }
+  }
+  
+
