responsive contact sections, responisve bug fixes header and references

--- a/src/app/references/references.component.html
+++ b/src/app/references/references.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="references-main">
     <h1>{{ h1Text }}</h1>
     <h2>{{ h2Text }}</h2>
     <div class="references-div">
@@ -8,3 +8,6 @@
         </app-single-reference>
     </div>
 </div>
+<div class="arrow-div" id="contact">
+    <app-arrow-section class="arrow-sec"></app-arrow-section>
+  </div>
