--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,3 @@
-<div class="arrow-div" id="contact">
-  <app-arrow-section class="arrow-sec"></app-arrow-section>
-</div>
 <div class="gradient-div"></div>
 
 <form
@@ -13,7 +10,7 @@
     <h1>{{ h1Text }}</h1>
   </div>
   <div>
-    <div>
+    <div class="subcaptions-div">
       <h2>{{ h2Text }}</h2>
       <h3>{{ h3Text }}</h3>
     </div>
