--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -6,15 +6,15 @@
 }
 
 .error-message {
-    color: red;
-    font-size: 12px;
-    margin-top: 5px;
-    >p{
-        padding: 0;
-        margin: 0;
-        padding-bottom: 12px;
-    }
-  }  
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
+  > p {
+    padding: 0;
+    margin: 0;
+    padding-bottom: 12px;
+  }
+}
 
 h1 {
   font-family: "syne800";
@@ -56,7 +56,9 @@ h3 {
   margin: 0;
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="email"],
+textarea {
   cursor: pointer;
   background-color: black;
   color: #fffcf3;
@@ -67,118 +69,62 @@ input[type="text"] {
   width: 100%;
   border: none;
   margin-bottom: 20px;
-  padding-top: 15px;
-  padding-right: 25px;
-  padding-bottom: 15px;
-  padding-left: 25px;
+  padding: 15px 25px;
   gap: 10px;
-  border-bottom-width: 2px;
   outline: none;
   &::placeholder {
     color: $backround_color;
   }
-  &:hover{
+  &:hover {
     outline: 2px white solid;
   }
-  &:focus { 
+  &:focus {
     outline: 2px white solid;
   }
 }
 
-input[type="email"] {
-  cursor: pointer;
-    background-color: black;
-    color: #fffcf3;
-    font-family: "overpass";
-    font-size: 16px;
-    font-weight: 400;
-    border-bottom: 2px #fffcf3 solid !important;
-    width: 100%;
-    border: none;
-    margin-bottom: 20px;
-    padding-top: 15px;
-    padding-right: 25px;
-    padding-bottom: 15px;
-    padding-left: 25px;
-    gap: 10px;
-    border-bottom-width: 2px;
-    outline: none;
-    &::placeholder {
-      color: $backround_color;
-    }
-    &:hover{
-      outline: 2px white solid;
-    }
-    &:focus { 
-      outline: 2px white solid;
-    }
-  }
-
 textarea {
-  background-color: black;
-  color: #fffcf3;
-  border-bottom: 2px #fffcf3 solid !important;
-  width: 100%;
-  font-family: "overpass";
-  font-size: 16px;
-  font-weight: 400;
-  border: none;
   height: 202px;
-  padding-top: 15px;
-  padding-right: 25px;
-  padding-bottom: 15px;
-  padding-left: 25px;
-  gap: 10px;
-  border-bottom-width: 2px;
-  &::placeholder {
-    color: $backround_color;
-  }
-  &:hover{
-    outline: 2px white solid;
-  }
-  &:focus { 
-    outline: 2px white solid;
-  }
 }
 
 button {
-    background-color: black;
-    color: #fffcf3;
-    cursor: pointer;
-    font-family: "overpass";
-    font-size: 23px;
-    width: 213px;
-    height: 68px;
-    outline: 4px solid #fffcf3;
-    border: none;
-    transition: all 0.1s ease;
+  background-color: black;
+  color: #fffcf3;
+  cursor: pointer;
+  font-family: "overpass";
+  font-size: 23px;
+  width: 213px;
+  height: 68px;
+  outline: 4px solid #fffcf3;
+  border: none;
+  transition: all 0.1s ease;
+  margin-left: 25px;
 }
 
 button:disabled {
-    background-color: black; 
-    color: gray; 
-    outline: 4px solid gray; 
-    border: none; 
-    cursor: not-allowed; 
-    pointer-events: none; 
-    transition: none;
+  background-color: black;
+  color: gray;
+  outline: 4px solid gray;
+  border: none;
+  cursor: not-allowed;
+  pointer-events: none;
+  transition: none;
 }
 
 button:hover {
-    &:hover {
-        width: 260px;
-        height: 70px;
-        font-weight: bold;
-    }
+  &:hover {
+    width: 260px;
+    height: 70px;
+    font-weight: bold;
+  }
 }
 
 button:disabled:hover {
-    background-color: black; 
-    color: gray; 
-    outline: 4px solid gray; 
-    cursor: not-allowed;
+  background-color: black;
+  color: gray;
+  outline: 4px solid gray;
+  cursor: not-allowed;
 }
-
 
 .input-div {
   width: 617px;
@@ -245,12 +191,12 @@ input[type="checkbox"] {
   appearance: none;
   border-radius: 3px;
   cursor: pointer;
-  position: relative; 
+  position: relative;
   z-index: 999;
 }
 
 input[type="checkbox"]:hover {
-  background-color: $highlight_color; 
+  background-color: $highlight_color;
 }
 
 input[type="checkbox"]:checked {
@@ -259,16 +205,17 @@ input[type="checkbox"]:checked {
 }
 
 input[type="checkbox"]:checked::after {
-  content: ""; 
-  position: absolute; 
-  top: 0px; 
-  left: 4px; 
-  width: 4px; 
-  height: 10px; 
-  border: solid #fffcf3; 
-  border-width: 0 2px 2px 0; 
-  transform: rotate(45deg); 
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 4px;
+  width: 4px;
+  height: 10px;
+  border: solid #fffcf3;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
 }
+
 div {
   width: 100%;
   margin: 0 auto;
@@ -278,21 +225,12 @@ div {
   text-align: center;
 }
 
-.arrow-div {
-  display: flex;
-  align-items: flex-end;
-  position: absolute;
-  width: 100%;
-  z-index: 2;
-}
-
 .gradient-div {
   background-color: black;
   clip-path: polygon(0 30%, 100% 100%, 0 100%);
   height: 310px;
   position: relative;
   z-index: 1;
-  padding-top: 80px;
 }
 
 .arrow-sec {
@@ -300,29 +238,154 @@ div {
 }
 
 .bottom-div {
-    max-width: 1259px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between; 
-    align-items: center;
-    width: 100%;
+  max-width: 1259px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 .button-container {
-    height: 75px;
-    display: flex;
-    justify-content: center; 
-    flex-grow: 1;
+  height: 75px;
+  display: flex;
+  justify-content: center;
+  flex-grow: 1;
 }
 
 .scroll-up-img {
-    cursor: pointer;
-    width: 50px; 
-    height: auto; 
-    transition: transform 0.3s ease, opacity 0.3s ease, filter 0.3s ease;
-    margin-left: auto; 
+  cursor: pointer;
+  width: 50px;
+  height: auto;
+  transition: transform 0.3s ease, opacity 0.3s ease, filter 0.3s ease;
+  margin-left: auto;
 }
 
 .scroll-up-img:hover {
-    content: url('./../../assets/scroll-up-arrow/scroll-up-arrow-hov.png'); 
+  content: url("./../../assets/scroll-up-arrow/scroll-up-arrow-hov.png");
 }
+
+@media (max-width: 1350px) {
+  h1{
+    padding-left: 24px;
+  }
+}
+
+@media (max-width: 800px) {
+  h1 {
+    font-size: 58px;
+    padding-left: 16px;
+  }
+
+  h2 {
+    font-size: 28px;
+  }
+
+  h3 {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 700px) {
+  .gradient-div {
+    height: 200px;
+  }
+
+  .h1-div,
+  .subcaptions-div {
+    width: 482px;
+  }
+
+  input[type="text"],
+  input[type="email"],
+  textarea, .input-div {
+    width: 462.75px;
+  }
+}
+
+@media (max-width: 550px) {
+  .gradient-div {
+    height: 100px;
+  }
+
+  .h1-div,
+  .subcaptions-div {
+    width: 367px;
+  }
+
+  input[type="text"],
+  input[type="email"],
+  textarea, .input-div {
+    width: 347px;
+  }
+
+  p {
+    max-width: 315px;
+  }
+
+  .scroll-up-img{
+    display: none;
+  }
+
+  button{
+    margin-left: 0px;
+  }
+}
+
+@media (max-width: 450px) {
+  h1 {
+    font-size: 48px;
+    padding-left: 10px;
+  }
+
+  h2 {
+    font-size: 22px;
+  }
+
+  h3 {
+    font-size: 16px;
+  }
+
+  .h1-div,
+  .subcaptions-div,
+  input[type="text"],
+  input[type="email"],
+  textarea,.input-div {
+    width: 280px;
+  }
+
+  p{
+    max-width: 250px;
+  }
+
+  input[type="checkbox"]{
+    margin-right: 8px;
+  }
+
+  input[type="text"],
+  input[type="email"],
+  textarea {
+    padding: 10px 20px;
+  }
+
+  .scroll-up-img{
+    display: none;
+  }
+}
+
+@media (max-width: 350px){
+  input[type="text"],
+  input[type="email"],
+  textarea,.input-div {
+    width: 250px;
+  }
+
+  p{
+    max-width: 220px;
+  }
+
+  input[type="checkbox"]{
+    margin-right: 8px;
+  }
+}
+
