--- a/src/app/references/references.component.scss
+++ b/src/app/references/references.component.scss
@@ -1,5 +1,5 @@
 @import "../../styles.scss";
-div {
+.references-main{
     width: 100%;
     max-width: 1259px;
     margin: 0 auto;
@@ -34,6 +34,21 @@ div {
     justify-content: center;
   }
 
+  .arrow-div{
+    width: 100%;
+    max-width: 1259px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  
+  @media (max-width: 1050px) {
+    h1{
+      padding-top: 60px;
+    }
+  }
+
   @media (max-width: 800px) {
     h1{
       font-size: 58px;
@@ -49,6 +64,10 @@ div {
     .references-div{
       flex-direction: column;
       padding-top: 0px;
+    }
+
+    .arrow-div{
+      align-items: center;
     }
   }
 
@@ -66,6 +85,7 @@ div {
   @media (max-width: 500px) {
     h1{
       font-size: 38px;
+      padding-top: 40px;
     }
 
     h2{
