--- a/src/app/references/single-reference/single-reference.component.html
+++ b/src/app/references/single-reference/single-reference.component.html
@@ -8,7 +8,7 @@
       <h2>{{ reference.title }}</h2>
     </div>
   </div>
-  <div>
+  <div class="ref-text">
     <p>{{ reference.quote }}</p>
   </div>
 </div>
