--- a/src/app/references/single-reference/single-reference.component.scss
+++ b/src/app/references/single-reference/single-reference.component.scss
@@ -21,7 +21,7 @@ p {
   font-size: 18px;
   padding: 0;
   margin: 0;
-  padding-top: 24px;
+  padding-top: 16px;
   padding-left: 16px;
   padding-right: 16px;
 }
@@ -63,6 +63,16 @@ p {
   .ref-main {
     height: 275px;
     width: 317px;
+  }
+
+  .ref-text{
+    overflow-y: auto;  
+    overflow-x: hidden;
+    margin-bottom: 10px;
+  }
+
+  .ref-text::-webkit-scrollbar {
+    display: none;         
   }
 
   p {
