--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -331,12 +331,12 @@ p {
 @media (max-width: 400px) {
   .logo {
     padding-top: 10px;
-    padding-left: 5px;
+    margin-left: 5px;
     height: 80px;
   }
 
   .header-button {
-    padding-right: 5px;
+    margin-right: 5px;
   }
 
   .header-language {
