--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -46,7 +46,13 @@ h2 {
   }
 }
 
-@media (max-width: 650px) {
+@media (max-width: 700px) {
+div{
+  max-width: 600px;
+}
+}
+
+@media (max-width: 660px) {
   h1{
     font-size: 55px;
   }
