--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,8 @@ $highlight_color: #00bc8f;
 body{
     background-color: $backround_color;
     margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
 .skill-learn a {
@@ -42,7 +44,6 @@ body{
 }
 
 .check-div a{
-  
     text-decoration: none;
     color: $highlight_color;
     font-family: Overpass;
@@ -75,4 +76,6 @@ body{
     font-family: 'overpass700'; 
     src: url('assets/fonts/overpass-700.woff2') format('woff2');
   }
+  
+ 
   
